--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "movie",
+  "name": "Indegene",
   "version": "1.0.0",
-  "description": "Simple web app based on OMDb API to search movies.",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
